# dr-claude

./: .gitignore  Makefile  README.md  pyproject.toml
client/: README.md
client/public/: index.html
client/src/: App.js  index.css  index.js
client/src/components/: CenterImage.js  ChatBody.js  ChatFooter.js  ChatPage.js  Home.js
data/: ClaudeKnowledgeBase.csv  NYPHKnowldegeBase.html
dr_claude/: __init__.py  app.py  application.py  base.py  callbacks.py  chaining_the_chains.py  datamodels.py  kb_reading.py  runner.py  weight_updating.py
dr_claude/chains/: cc_prompts.py  decision_claude.py  doctor.py  explain_yourself.py  matcher.py  patient.py  prompts.py
dr_claude/chains/doctor/: doctor_asking.py
dr_claude/chains/patient/: chief_complaint.py
dr_claude/chains/retrievals/: kb_retrieval.py
dr_claude/claude_mcts/: action_states.py  multi_choice_mcts.py
dr_claude/kb/: kb_reading.py  weight_updating.py
dr_claude/mcts/: action_states.py  base.py  probability_calcs.py
dr_claude/mcts_module/: action_states.py
dr_claude/planning/: base.py  drclaude_mcts.py  probabilistic.py  states.py
dr_claude/retrieval/: embeddings.py  retriever.py  t.py
dr_claude_inter/: app.py  datamodels.py
dr_claude_inter/kb/: kb_reading.py  weight_updating.py
dr_claude_inter/planning/: drclaude_mcts.py  probabilistic.py  states.py
dr_claude_old/: application.py  chaining_the_chains.py  datamodels.py  kb_reading.py  runner.py  weight_updating.py
dr_claude_old/chains/: decision_claude.py  doctor.py  matcher.py
dr_claude_old/claude_mcts/: action_states.py  probability_calcs.py
dr_claude_old/retrieval/: embeddings.py  retriever.py
notebooks/: 00_data_exploration.ipynb  01_mcts.ipynb
tests/: test_conditional_proba.py  test_datamodels.py  test_expansion_mcts.py  test_matrix.py  test_mcts.py
tests/planning/: test_drclaude_mcts.py  test_probabilistic.py
