[tool.poetry]
name = "dr-claude"
version = "0.1.0"
description = "TODO"
authors = ["Arthur, Fady, Sukru, Wian"]
license = "Apache"
readme = "README.md"
packages = [{include = "dr_claude"}]

[tool.poetry.dependencies]
python = "^3.10"
transformers = "^4.31.0"
langchain = "^0.0.247"
pydantic = ">=1,<2"
torch = "^2.0.1"
notebook = "^7.0.0"
pandas = "^2.0.3"
bs4 = "^0.0.1"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
