[tool.poetry]
name = "dr-claude"
version = "0.1.0"
description = "TODO"
authors = ["Arthur, Fady, Sukru, Wian"]
license = "Apache"
readme = "README.md"
packages = [{include = "dr_claude"}]

[tool.poetry.dependencies]
python = "^3.10"
langchain = "^0.0.247"
pydantic = ">=1,<2"
faiss-cpu = "^1.7.4"
notebook = "^7.0.0"
pandas = "^2.0.3"
bs4 = "^0.0.1"
mcts = "^1.0.4"
loguru = "^0.7.0"
anthropic = "^0.3.6"
nest-asyncio = "^1.5.7"
torch = "^2.0.1"
pip = "^23.2.1"
install = "^1.3.5"
nvidia-cuda-cupti-cu11 = "^11.8.87"
transformers = "^4.31.0"
fastapi = "^0.100.1"
uvicorn = "^0.23.1"
jinja2 = "^3.1.2"
websockets = "^11.0.3"

[tool.poetry.group.dev.dependencies]
black = "^23.7.0"
pytest = "^7.4.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
